add suggested package to composer.json

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,10 @@
         }
     },
 
+    "suggest": {
+        "ohlandt/user-profiles": "wololo"
+    },
+
     "extra": {
         "bolt-assets": "assets"
     }
