edit suggested packages in composer.json

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
 
     "suggest": {
-        "ohlandt/user-profiles": "wololo"
+        "ohlandt/user-profiles": "wololo",
+        "bobdenotter/seo": "whatever lol"
     },
 
     "extra": {
